--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2096,7 +2096,12 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+
 	}
+
+    .image:hover {
+      opacity: 0.7;
+    }
 
 		.image img {
 			border-radius: 3px;
@@ -4052,3 +4057,27 @@ input, select, textarea {
     background: white;
     color: grey;
   }
+
+  /*Inspirational Quote Image*/
+/*  .quote-image {
+    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+    background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+    background-attachment: fixed;
+    background-position: 50% 25%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 0;
+  }
+
+  .quote-image.is-mobile {
+      background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+      background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+      background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/wedding.jpeg");
+      background-attachment: fixed;
+      background-position: 50% 0%;
+      background-repeat: no-repeat;
+      background-size: 50%;
+  }*/
