--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3815,9 +3815,10 @@ input, select, textarea {
 
 		}
 
-/* Main */
+/* Main Bidcast */
 
-	#main > header {
+
+	#main-bidcast > header {
 		padding: 12em 0 10em 0 ;
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/bidcast-logo.png");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/bidcast-logo.png");
@@ -3834,25 +3835,25 @@ input, select, textarea {
 
 
 
-		#main > header h2 {
+		#main-bidcast > header h2 {
 			font-size: 1.75em;
 			margin: 0 0 0.5em 0;
 		}
 
-		#main > header p {
+		#main-bidcast > header p {
 			color: inherit;
 			letter-spacing: 0.225em;
 			text-transform: uppercase;
 			top: 0;
 		}
 
-			#main > header p a {
+			#main-bidcast > header p a {
 				color: inherit;
 			}
 
 		@media screen and (max-width: 1680px) {
 
-			#main > header {
+			#main-bidcast > header {
 				padding: 10em 0 8em 0 ;
 			}
 
@@ -3860,7 +3861,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 1280px) {
 
-			#main > header {
+			#main-bidcast > header {
 				padding: 8em 3em 6em 3em ;
 			}
 
@@ -3868,7 +3869,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 980px) {
 
-			#main > header {
+			#main-bidcast > header {
 				padding: 10em 3em 8em 3em ;
 			}
 
@@ -3876,21 +3877,97 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
-			#main > header {
+			#main-bidcast > header {
 				padding: 5em 3em 3em 3em ;
 			}
 
-				#main > header h2 {
+				#main-bidcast > header h2 {
 					font-size: 1.25em;
 					margin: 0 0 1em 0;
 				}
 
 		}
 
-	body.is-mobile #main > header {
+	body.is-mobile #main-bidcast > header {
 		background-attachment: scroll;
 	}
 
+  /* Main Full Measure */
+
+
+    #main-full-measure > header {
+      padding: 12em 0 10em 0 ;
+      background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-attachment: fixed;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      text-align: center;
+    }
+
+
+
+
+
+      #main-full-measure > header h2 {
+        font-size: 1.75em;
+        margin: 0 0 0.5em 0;
+      }
+
+      #main-full-measure > header p {
+        color: inherit;
+        letter-spacing: 0.225em;
+        text-transform: uppercase;
+        top: 0;
+      }
+
+        #main-full-measure > header p a {
+          color: inherit;
+        }
+
+      @media screen and (max-width: 1680px) {
+
+        #main-full-measure > header {
+          padding: 10em 0 8em 0 ;
+        }
+
+      }
+
+      @media screen and (max-width: 1280px) {
+
+        #main-full-measure > header {
+          padding: 8em 3em 6em 3em ;
+        }
+
+      }
+
+      @media screen and (max-width: 980px) {
+
+        #main-full-measure > header {
+          padding: 10em 3em 8em 3em ;
+        }
+
+      }
+
+      @media screen and (max-width: 736px) {
+
+        #main-full-measure > header {
+          padding: 5em 3em 3em 3em ;
+        }
+
+          #main-full-measure > header h2 {
+            font-size: 1.25em;
+            margin: 0 0 1em 0;
+          }
+
+      }
+
+    body.is-mobile #main-full-measure > header {
+      background-attachment: scroll;
+    }
 /* Footer */
 
 	#footer {
