added the wall page, updated links in nav, page css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3968,6 +3968,83 @@ input, select, textarea {
     body.is-mobile #main-full-measure > header {
       background-attachment: scroll;
     }
+
+  /* Main The Wall */
+
+
+    #main-the-wall > header {
+      padding: 12em 0 10em 0 ;
+      background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-attachment: fixed;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      text-align: center;
+    }
+
+
+
+
+
+      #main-the-wall > header h2 {
+        font-size: 1.75em;
+        margin: 0 0 0.5em 0;
+      }
+
+      #main-the-wall > header p {
+        color: inherit;
+        letter-spacing: 0.225em;
+        text-transform: uppercase;
+        top: 0;
+      }
+
+        #main-the-wall > header p a {
+          color: inherit;
+        }
+
+      @media screen and (max-width: 1680px) {
+
+        #main-the-wall > header {
+          padding: 10em 0 8em 0 ;
+        }
+
+      }
+
+      @media screen and (max-width: 1280px) {
+
+        #main-the-wall > header {
+          padding: 8em 3em 6em 3em ;
+        }
+
+      }
+
+      @media screen and (max-width: 980px) {
+
+        #main-the-wall > header {
+          padding: 10em 3em 8em 3em ;
+        }
+
+      }
+
+      @media screen and (max-width: 736px) {
+
+        #main-the-wall > header {
+          padding: 5em 3em 3em 3em ;
+        }
+
+          #main-the-wall > header h2 {
+            font-size: 1.25em;
+            margin: 0 0 1em 0;
+          }
+
+      }
+
+    body.is-mobile #main-the-wall > header {
+      background-attachment: scroll;
+    }
 /* Footer */
 
 	#footer {
