--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3974,10 +3974,10 @@ input, select, textarea {
 
     #main-the-wall > header {
       padding: 12em 0 10em 0 ;
-      background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
-      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
-      background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
-      background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/Full Measure 1.png");
+      background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/pic02.jpg");
+      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/pic02.jpg");
+      background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/pic02.jpg");
+      background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/pic02.jpg");
       background-attachment: fixed;
       background-position: center center;
       background-repeat: no-repeat;
