style updates true blue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2985,7 +2985,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			background-color: #0073E6;
 			color: #d3d4e4;
 		}
 
