completed magnitude page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3893,6 +3893,83 @@ input, select, textarea {
 		background-attachment: scroll;
 	}
 
+	/* Main Magnitude */
+
+
+	#main-magnitude > header {
+		padding: 12em 0 10em 0 ;
+		/* background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/magnitude-gridmap.png");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/magnitude-gridmap.png");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/magnitude-gridmap.png");
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/magnitude-gridmap.png"); */
+		background-attachment: fixed;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: center;
+		text-align: center;
+	}
+
+
+
+
+
+		#main-magnitude > header h2 {
+			font-size: 1.75em;
+			margin: 0 0 0.5em 0;
+		}
+
+		#main-magnitude > header p {
+			color: inherit;
+			letter-spacing: 0.225em;
+			text-transform: uppercase;
+			top: 0;
+		}
+
+			#main-magnitude > header p a {
+				color: inherit;
+			}
+
+		@media screen and (max-width: 1680px) {
+
+			#main-magnitude > header {
+				padding: 10em 0 8em 0 ;
+			}
+
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			#main-magnitude > header {
+				padding: 8em 3em 6em 3em ;
+			}
+
+		}
+
+		@media screen and (max-width: 980px) {
+
+			#main-magnitude > header {
+				padding: 10em 3em 8em 3em ;
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			#main-magnitude > header {
+				padding: 5em 3em 3em 3em ;
+			}
+
+				#main-magnitude > header h2 {
+					font-size: 1.25em;
+					margin: 0 0 1em 0;
+				}
+
+		}
+
+	body.is-mobile #main-magnitude > header {
+		background-attachment: scroll;
+	}
+
   /* Main Actualize */
 
 
