--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4042,6 +4042,78 @@ input, select, textarea {
 		background-attachment: scroll;
 	}
 
+		/* Main BeerEZ */
+
+		#main-beerez > header {
+			padding: 12em 0 10em 0 ;
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
+			background-attachment: fixed;
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			text-align: center;
+		}
+	
+		#main-beerez > header h2 {
+			font-size: 1.75em;
+			margin: 0 0 0.5em 0;
+		}
+	
+		#main-beerez > header p {
+			color: inherit;
+			letter-spacing: 0.225em;
+			text-transform: uppercase;
+			top: 0;
+		}
+	
+			#main-beerez > header p a {
+				color: inherit;
+			}
+	
+		@media screen and (max-width: 1680px) {
+	
+			#main-beerez > header {
+				padding: 10em 0 8em 0 ;
+			}
+	
+		}
+	
+		@media screen and (max-width: 1280px) {
+	
+			#main-beerez > header {
+				padding: 8em 3em 6em 3em ;
+			}
+	
+		}
+	
+		@media screen and (max-width: 980px) {
+	
+			#main-beerez > header {
+				padding: 10em 3em 8em 3em ;
+			}
+	
+		}
+	
+		@media screen and (max-width: 736px) {
+	
+			#main-beerez > header {
+				padding: 2.5em 3em 3em 3em ;
+			}
+	
+				#main-beerez > header h2 {
+					font-size: 1.25em;
+					margin: 0 0 1em 0;
+				}
+		
+		}
+	
+		body.is-mobile #main-beerez > header {
+			background-attachment: scroll;
+		}
+
   /* Main Actualize */
 
 
