added images and some content to beerez page and main page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4046,10 +4046,10 @@ input, select, textarea {
 
 		#main-beerez > header {
 			padding: 12em 0 10em 0 ;
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
-			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/tb-restaurant.png");
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/beerez-main-2.png");
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/beerez-main-2.png");
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/beerez-main-2.png");
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/beerez-main-2.png");
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
